--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
             </div>
         </div>
     </section>
+
+    <!-- checking -->
 <!-- Clients/Testimonials Section -->
 <section id="testimonials" class="testimonials">
     <div class="container">
