back to white theme

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav class="container">
             <a href="#" class="logo">
                 <span class="logo-flex">
-                    <span class="logo-text-ar">ترحيب</span>
+                    <span class="logo-text-ar" style="font-family: 'GE SS TV', 'GE SS Two', Arial, sans-serif;">ترحيب</span>
                     <img src="img/logo.png" alt="Tarheeb Logo" class="logo-img" />
-                    <span class="logo-text-en">TARHEEB</span>
+                    <span style="font-family: 'ITC Symbol'; font-weight: bold;" class="logo-text-en">TARHEEB</span>
                 </span>
             </a>
             <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation">
