--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarheeb - Premier Passport & Visa Services Dubai</title>
+    <title>TARHEEB –Business Setup in Uae</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome CDN for star icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -73,8 +73,8 @@
 
         <div class="container">
             <div class="home-content">
-                <h1>Your Trusted <span>Dubai</span> Visa Partner</h1>
-                <p class="subtitle">Experience the luxury of seamless visa services</p>
+                <h1>Your Trusted <span>Business Setup/ Company</span> Formation…</h1>
+                <p class="subtitle">25+ Years of Excellence in Passport & Visa Services with 100% Success Rate</p>
                 <div class="home-buttons">
                     <a href="#services" class="cta-button">Our Services</a>
                     <a href="#contact" class="cta-button secondary">Get Started</a>
@@ -88,8 +88,11 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>About Tarheeb</h2>
-                    <p>With over 12 years of excellence in passport and visa services, Tarheeb has established itself as Dubai's most trusted partner for immigration and documentation needs.</p>
-                    <p>Our team of licensed professionals specializes in all types of visa processing, passport services, and document attestation, ensuring a smooth and efficient process with complete transparency and guaranteed results.</p>
+                    <p>With over 25+ years of excellence in passport and visa services, Tarheeb has established
+                        itself as Dubai's most trusted partner for immigration and documentation needs.</p>
+                    <p>Our team of licensed professionals specializes in all types of visa processing, passport
+                        services, and document attestation, ensuring a smooth and efficient process with complete
+                        transparency and guaranteed results.</p>
                     <div class="about-stats">
                         <div class="stat-item">
                             <div class="stat-number">5000+</div>
@@ -104,7 +107,7 @@
                             <div class="stat-label">Support</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number">12+</div>
+                            <div class="stat-number">25+</div>
                             <div class="stat-label">Years Experience</div>
                         </div>
                     </div>
@@ -341,28 +344,28 @@
                         <iframe src="https://www.google.com/maps?q=Al+Karama,+Dubai,+UAE&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                             <h4>Location</h4>
-                            <p>Al Karama, Dubai, UAE<br>Near Dubai Healthcare City</p>
+                            <p>Ajman, Rashideya1, UAE<br>Near Alkhour Tower</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
                         <div class="contact-details">
                             <h4>Phone</h4>
-                            <p>+971 4 123 4567<br>+971 50 123 4567</p>
+                            <p>+971 56 664 5714<br>+971 55 468 9163</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><i class="fas fa-envelope"></i></div>
                         <div class="contact-details">
                             <h4>Email</h4>
-                            <p>info@tarheeb.ae<br>support@tarheeb.ae</p>
+                            <p>info@tarheeb.ae</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><i class="fas fa-clock"></i></div>
                         <div class="contact-details">
                             <h4>Working Hours</h4>
-                            <p>Mon - Fri: 9:00 AM - 6:00 PM<br>Sat: 10:00 AM - 4:00 PM</p>
+                            <p>Mon - Sat: 8:00 AM - 2:30 PM – 5:00 Pm – 9:30 Pm<br>Friday: 8:00 AM – 12:30 PM – 5 PM – 9:30 PM</p>
                         </div>
                     </div>
                     <div class="contact-item">
