--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
                         <div class="contact-details">
                             <div class="map-embed">
-                        <iframe src="https://www.google.com/maps?q=Al+Karama,+Dubai,+UAE&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3604.3243798697263!2d55.4576292!3d25.393950299999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f58376781ef29%3A0x172188b3f5fdda9!2sAl-Khor%20Towers%20-%20Al%20Rashidiya%201%20-%20Ajman%20-%20United%20Arab%20Emirates!5e0!3m2!1sen!2sin!4v1753688966771!5m2!1sen!2sin" width="400" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                             <h4>Location</h4>
                             <p>Ajman, Rashideya1, UAE<br>Near Alkhour Tower</p>
@@ -365,7 +365,7 @@
                         <div class="contact-icon"><i class="fas fa-clock"></i></div>
                         <div class="contact-details">
                             <h4>Working Hours</h4>
-                            <p>Mon - Sat: 8:00 AM - 2:30 PM – 5:00 Pm – 9:30 Pm<br>Friday: 8:00 AM – 12:30 PM – 5 PM – 9:30 PM</p>
+                            <p>Mon - Sat: 8:00 AM - 2:30 PM , 5:00 Pm – 9:30 Pm<br>Friday: 8:00 AM – 12:30 PM , 5 PM – 9:30 PM</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -431,7 +431,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About Tarheeb</h3>
-                    <p>Dubai's most trusted passport and visa service provider with over 12 years of excellence. We ensure 100% success rate with transparent processes and exceptional customer service.</p>
+                    <p>Dubai's most trusted passport and visa service provider with over 25 years of excellence. We ensure 100% success rate with transparent processes and exceptional customer service.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
@@ -456,22 +456,9 @@
                         <li><a href="#services">Attestation & Translation</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h3>Contact Info</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Al Karama, Dubai, UAE</p>
-                    <p><i class="fas fa-phone-alt"></i> +971 4 123 4567</p>
-                    <p><i class="fas fa-envelope"></i> info@tarheeb.ae</p>
-                    <p><i class="fas fa-clock"></i> Mon-Fri: 9AM-6PM</p>
-                    <div class="footer-social">
-                        <a href="#" aria-label="Facebook" style="margin-right:10px;"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" aria-label="Twitter" style="margin-right:10px;"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="Instagram" style="margin-right:10px;"><i class="fab fa-instagram"></i></a>
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Tarheeb. All rights reserved. | Licensed Passport & Visa Service Provider</p>
+                <p>&copy; 2025 Tarheeb. All rights reserved. | Business Setup in Uae</p>
             </div>
         </div>
     </footer>
