--- a/index.html
+++ b/index.html
@@ -143,42 +143,47 @@
         <div class="container">
             <h2 class="section-title">Our Premium Services</h2>
             <div class="services-grid">
-                <div class="service-card fade-in">
+                <div class="service-card fade-in reveal-up stagger-1">
                     <div class="service-icon"><i class="fas fa-building"></i></div>
                     <h3 class="service-title">Company Formation</h3>
                     <p class="service-description">Expert assistance in setting up your business in the UAE, from choosing the right structure to full registration support.</p>
                 </div>
-                <div class="service-card fade-in">
+                <div class="service-card fade-in reveal-up stagger-2">
+
                     <div class="service-icon"><i class="fas fa-certificate"></i></div>
                     <h3 class="service-title">Trade License</h3>
                     <p class="service-description">Comprehensive trade license services for all business types, ensuring compliance and fast approvals.</p>
                 </div>
-                <div class="service-card fade-in">
+                <div class="service-card fade-in reveal-up stagger-2">
                     <div class="service-icon"><i class="fas fa-user-tie"></i></div>
                     <h3 class="service-title">Employment Visa</h3>
                     <p class="service-description">Seamless employment visa processing for companies and professionals, including renewals and new applications.</p>
                 </div>
-                <div class="service-card fade-in">
+                <div class="service-card fade-in reveal-up stagger-3">
+
                     <div class="service-icon"><i class="fas fa-users"></i></div>
                     <h3 class="service-title">Family Visa</h3>
                     <p class="service-description">Family visa services to help you bring your loved ones to the UAE with ease and peace of mind.</p>
                 </div>
-                <div class="service-card fade-in">
+                <div class="service-card fade-in reveal-up stagger-4">
+
                     <div class="service-icon"><i class="fas fa-user-shield"></i></div>
                     <h3 class="service-title">Investor Visa</h3>
                     <p class="service-description">Investor visa solutions for entrepreneurs and business owners seeking long-term residency in the UAE.</p>
                 </div>
-                <div class="service-card fade-in">
+                <div class="service-card fade-in reveal-up stagger-5">
+
                     <div class="service-icon"><i class="fas fa-medal"></i></div>
                     <h3 class="service-title">Golden Visa</h3>
                     <p class="service-description">Premium Golden Visa services for eligible investors, professionals, and talents, offering long-term residency.</p>
                 </div>
-                <div class="service-card fade-in">
+                <div class="service-card fade-in reveal-up stagger-6">
+
                     <div class="service-icon"><i class="fas fa-briefcase"></i></div>
                     <h3 class="service-title">Tasheel & Labor Services</h3>
                     <p class="service-description">All Tasheel and labor-related services, including work permits, contracts, and government transactions.</p>
                 </div>
-                <div class="service-card fade-in">
+                <div class="service-card fade-in reveal-up stagger-7">
                     <div class="service-icon"><i class="fas fa-language"></i></div>
                     <h3 class="service-title">Attestation & Translation</h3>
                     <p class="service-description">Certified document attestation and professional translation services for all your legal and business needs.</p>
