--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
-        <video class="hero-video" autoplay muted loop playsinline preload="auto" id="heroVideo">
-            <source src="img/home_section_1.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <div class="video-container">
+            <iframe class="hero-video" src="https://www.youtube.com/embed/io40bNwucLs?si=ylDldacsQZUA6XdK&amp;start=25&autoplay=1&mute=1&loop=1&playlist=io40bNwucLs&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
         
         <div class="container">
             <div class="hero-content">
