--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="video-container">
-            <iframe class="hero-video" src="https://www.youtube.com/embed/io40bNwucLs?si=ylDldacsQZUA6XdK&amp;start=25&autoplay=1&mute=1&loop=1&playlist=io40bNwucLs&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe class="hero-video desktop-video" src="https://www.youtube.com/embed/io40bNwucLs?si=ylDldacsQZUA6XdK&amp;start=25&autoplay=1&mute=1&loop=1&playlist=io40bNwucLs&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <video autoplay loop muted playsinline class="hero-video mobile-video">
+                <source src="img/home_section_1.mp4#t=25" type="video/mp4">
+            </video>
         </div>
         
         <div class="container">
