--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TARHEEB – Premium Business Setup in UAE</title>
+    <meta name="google-site-verification" content="NjNjrK8FKNgFS-AQSmo-CXf0TOA9LH18DMzo">
+    
+    <!-- Primary Meta Tags -->
+    <title>TARHEEB – Premium Business Setup Services in UAE | Company Formation, Visa & Trade License</title>
+    <meta name="title" content="TARHEEB – Premium Business Setup Services in UAE | Company Formation, Visa & Trade License">
+    <meta name="description" content="Tarheeb offers 25+ years of excellence in UAE business setup, trade licenses, company formation, visas (employment, family, investor, golden), and attestation services with 100% success rate.">
+    <meta name="keywords" content="Business setup UAE, Company formation UAE, Trade license UAE, Visa services UAE, Golden visa UAE, Investor visa UAE, Tarheeb, UAE business services, Attestation UAE, Labor services UAE">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="TARHEEB">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.tarheeb.ae/">
+    <meta property="og:title" content="TARHEEB – Premium Business Setup Services in UAE">
+    <meta property="og:description" content="Expert UAE business setup services: company formation, trade licenses, visas, attestation & translation with 100% success rate.">
+    <meta property="og:image" content="https://www.tarheeb.ae/img/logo2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.tarheeb.ae/">
+    <meta property="twitter:title" content="TARHEEB – Premium Business Setup Services in UAE">
+    <meta property="twitter:description" content="Expert UAE business setup services: company formation, trade licenses, visas, attestation & translation with 100% success rate.">
+    <meta property="twitter:image" content="https://www.tarheeb.ae/img/logo2.png">
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/logo.png" type="image/png">
+
+    <!-- Fonts & Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/logo.png" type="image/png">
+</head>
+
 
    
 </head>
@@ -112,7 +141,7 @@
                                 <i class="fas fa-user"></i>
                             </div>
                         </div>
-                        <div class="stat-text">Happy Clients</div>
+                        <div class="stat-text"><b>5000+</b> Happy Clients</div>
                     </div>
                     <div class="stat-box">
                         <div class="stat-animation">
@@ -511,5 +540,83 @@
     </div>
 
     <script src="js/main.js"></script>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "How long does it take to set up a business in UAE?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "It usually takes 1-2 weeks depending on the business type and required approvals."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer visa services?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, we provide Employment, Family, Investor, and Golden Visa services in the UAE."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you guarantee a 100% success rate?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, we ensure a 100% success rate in business setup and visa processing based on our 25+ years of expertise."
+          }
+        }
+      ]
+    },
+    {
+      "@type": "LocalBusiness",
+      "@id": "https://www.tarheeb.ae/#business",
+      "name": "TARHEEB",
+      "image": "https://www.tarheeb.ae/img/logo2.png",
+      "url": "https://www.tarheeb.ae",
+      "telephone": "+971566645714",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Rashideya1, Near Alkhour Tower",
+        "addressLocality": "Ajman",
+        "addressCountry": "UAE"
+      },
+      "sameAs": [
+        "https://www.facebook.com/tarheeb",
+        "https://www.instagram.com/tarheeb",
+        "https://www.linkedin.com/company/tarheeb"
+      ]
+    },
+    {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.tarheeb.ae"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Services",
+          "item": "https://www.tarheeb.ae/#services"
+        }
+      ]
+    }
+  ]
+}
+</script>
+
+
+
+
+
 </body>
 </html>
