added instagram link

--- a/index.html
+++ b/index.html
@@ -380,8 +380,9 @@
                             </div>
                             <div class="contact-text">
                                 <h4>Locations</h4>
-                                <p><a href="https://maps.app.goo.gl/FzGM92txTdCrHEjx8" target="_blank"><strong>Ajman:</strong> Rashideya1, UAE, Near Alkhour Tower</a></p>
-                                <p><a href="https://maps.app.goo.gl/fFufpgcGoqpGBoPg6" target="_blank"><strong>Fujairah:</strong> Al Mahata, UAE, Near City Plaza Hotel</a></p>
+                                <p><a href="https://share.google/jWhT7kUwXwCgTPZWg" target="_blank"><strong>Ajman:</strong> Rashideya1, UAE, Near Alkhour Tower</a></p>
+                                <p><a href="https://maps.app.goo.gl/fFufpgcGoqpGBoPg6" target="_blank"><strong>Fujairah:</strong> Rashideya 1, Ajman
+Burj Avenue Tower</a></p>
                             </div>
                         </div>
                         
@@ -424,10 +425,7 @@
                         <div class="contact-text">
                             <h4>Follow Us</h4>
                             <div class="social-links">
-                                <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                                <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                                <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://www.instagram.com/tarheeb_typing._?igsh=cXB4OTA4eTUycjJl" target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
